253 remove dependeny on DatatypeConverter (#254)
* Issue #213: force use of TLS 1.2

* Issue #253: Remove dependency on javax.xml.bind.DatatypeConverter